# guessMe

./: .editorconfig  .gitignore  .pre-commit-config.yaml  agents.py  compute.py  demo.py  game.py  llm_game.py  main.py  output.csv  pyproject.toml  user_game.py
agents/: answer_agent.py  question_agent.py
src/guessme/: 1_🏡_Homepage.py  __init__.py  game.py  llm_game.py  main.py  user_game.py
src/guessme/llm/: agents.py  game.py  llm_game.py  user_game.py
src/guessme/pages/: 2_🔧_Settings.py  3_🧠_Game.py  3_🧠_Player_vs_LLM.py  4_🤖_LLM_vs_LLM.py
src/guessme/tools/: lottie.py  password.py
src/guessme/utils/: constants.py  prompts.py
utils/: categories.py  prompts.py  utils.py
